--- a/game.project
+++ b/game.project
@@ -9,6 +9,8 @@ render = /riritools/render/render.renderc
 
 [input]
 game_binding = /input/game.input_bindingc
+repeat_interval = 0.01
+repeat_delay = 0.02
 
 [display]
 width = 1280
